Scrollbars in popins when small screen. Fixes #192.

--- a/static/css/themes/kansha.css
+++ b/static/css/themes/kansha.css
@@ -543,6 +543,7 @@ i.icon {
     bottom: 0;
     left: 0;
     text-align: center;
+    overflow: auto;
 }
 
 .modal > div {
